--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>HangMan</title>
   </head>
   <body>
-    <h1>HangMan Game</h1>
     <div class="container">
       <div class="game-info">
-        <div class="game-name">can you help me?</div>
+        <div class="game-name">Guess the word to save me (-_-)</div>
         <div class="category">Word From:<span></span></div>
       </div>
+      <button id="restart-btn">New Game</button>
       <hr />
       <div class="row">
         <div class="hangman-draw">
@@ -36,5 +36,7 @@
       <hr />
       <div class="letters-guess"></div>
     </div>
+    <audio id="cor1" src="./audio/cat-laugh-meme-1.mp3" preload="auto"></audio>
+    <audio id="mis1" src="./audio/im-dying.mp3" preload="auto"></audio>
   </body>
 </html>
